Slides 06: Particle Filter: Add Monte Carlo slides

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -309,6 +309,46 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Monte Carlo Localization - Correction Step}
+    \note{Information taken from Cyrill Stachniss's video https://youtu.be/MsYlueVDLI0}
+    
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{./images/particle_filter/monte_carlo_correction.pdf}
+    \end{center}
+    
+\end{frame}
+    
+\begin{frame}
+    \frametitle{Monte Carlo Localization - Resampling and Prediction}
+    \note{Information taken from Cyrill Stachniss's video https://youtu.be/MsYlueVDLI0}
+    
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{./images/particle_filter/monte_carlo_resample_and_predict.pdf}
+    \end{center}
+    
+\end{frame}
+    
+\begin{frame}
+    \frametitle{Monte Carlo Localization - Correction Step 2}
+    \note{Information taken from Cyrill Stachniss's video https://youtu.be/MsYlueVDLI0}
+    
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{./images/particle_filter/monte_carlo_correction2.pdf}
+    \end{center}
+    
+\end{frame}
+    
+\begin{frame}
+    \frametitle{Monte Carlo Localization - Resampling and Prediction 2}
+    \note{Information taken from Cyrill Stachniss's video https://youtu.be/MsYlueVDLI0}
+    
+    \begin{center} 
+        \includegraphics[width=0.8\textwidth]{./images/particle_filter/monte_carlo_resample_and_predict2.pdf} 
+    \end{center}
+    
+\end{frame}
+
+\begin{frame}
     \frametitle{Resampling}
     \note{Content from Cyrill Stachniss's video: https://youtu.be/MsYlueVDLI0}
 
